--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "date-fns": "^2.29.3",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
-    "react-day-picker": "^8.4.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
